[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/sprites/tanks/blue/player/tanktop/sprite_tanktop0.png" type="Texture" id=1]
[ext_resource path="res://game/entities/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/tanks/blue/player/tanktop/sprite_tanktop2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/tanks/blue/player/tankbot/sprite_tankbot2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/tanks/blue/player/tankbot/sprite_tankbot3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/emotes/sprite_emotes26.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/tanks/blue/player/tanktop/sprite_tanktop1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/tanks/blue/player/tanktop/sprite_tanktop3.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/tanks/blue/player/tankbot/sprite_tankbot0.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/tanks/blue/player/tankbot/sprite_tankbot1.png" type="Texture" id=10]


[sub_resource type="CapsuleShape2D" id=1]
radius = 6.6
height = 0.7

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Walk",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.25293, 0.226964, 0.226964, 1, 0.369141, 0.369141, 0.369141, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.28
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = -50.0
initial_velocity_random = 0.5
angular_velocity = 360.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -90.0
damping = 10.0
damping_random = 1.0
angle = 45.0
scale = 0.7
scale_random = 0.2
color_ramp = SubResource( 4 )
hue_variation_random = 1.0

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 14.0
} ]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/iosevka-regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = SubResource( 7 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TankTop" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
z_index = 1
frames = SubResource( 2 )
animation = "Idle"
frame = 2
playing = true

[node name="Particles2D" type="Particles2D" parent="TankTop"]
position = Vector2( -2.5, -6.25 )
scale = Vector2( 1.25, 1.25 )
z_index = -1
emitting = false
amount = 30
lifetime = 0.6
one_shot = true
local_coords = false
process_material = SubResource( 5 )

[node name="TankBot" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 6 )
animation = "Walk"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.4
drag_margin_top = 0.4
drag_margin_right = 0.4
drag_margin_bottom = 0.4

[node name="emote" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )
offset = Vector2( 0, -16 )

[node name="RightRay" type="RayCast2D" parent="."]
rotation = -0.785398
enabled = true
cast_to = Vector2( 0, 9.5 )

[node name="LeftRay" type="RayCast2D" parent="."]
rotation = 0.785398
enabled = true
cast_to = Vector2( 0, 9.5 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -72.0
margin_top = 20.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gate Has Opened!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFadeOut" type="Timer" parent="."]
wait_time = 0.1

[node name="LabelFadeIn" type="Timer" parent="."]
wait_time = 0.1

[node name="WaitStartFadeOut" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="LabelFadeOut" to="." method="_on_FadeOut_timeout"]
[connection signal="timeout" from="LabelFadeIn" to="." method="_on_FadeIn_timeout"]
[connection signal="timeout" from="WaitStartFadeOut" to="." method="_on_WaitStartFadeOut_timeout"]
